Fixed mobile navigation
Mobile nav was too far away from the hamburger / X

--- a/wp-content/themes/bioone-starter-theme/css/main.css
+++ b/wp-content/themes/bioone-starter-theme/css/main.css
@@ -761,6 +761,7 @@ nav {
     margin-top: 12px; }
     @media only screen and (max-width: 740px) {
       nav ul.menu {
+        width: 265px;
         float: none;
         padding-top: 6.5px;
         margin: 0;
