--- a/wp-content/themes/bioone-starter-theme/scss/partials/_header.scss
+++ b/wp-content/themes/bioone-starter-theme/scss/partials/_header.scss
@@ -138,7 +138,7 @@
   }
 }
 
-// N A V I G A T I O N
+// NAVIGATION
 // navigation for mobile state
 nav {
   z-index: 1;
@@ -267,6 +267,7 @@ nav {
     margin-top: 12px; 
 
     @include media-query(max, small) {
+      width: 265px; 
       float: none; 
       padding-top: 6.5px; 
       margin: 0; 
